  * implement clEnqRead/Copy/WriteRect + clEnqFillBuffer
  * implement global offsets
  * add support for external memory
  * implement WG sizes larger than vulkan limits with global offsets
  * fix module constants
  * and other small fixes and improvements
- All device names used to control the platform setup via
  POCL_DEVICES are now lower case (as documented in the user manual).

3.0 June 2022
=============

Notable User Facing Changes
---------------------------

- OpenCL 3.0 support:
   * OpenCL 3.0 is enabled at platform level, all API calls
     up to 3.0 are implemented
   * The CPU device reports OpenCL 3.0 if LLVM is recent enough
     (LLVM 14+), otherwise it reports OpenCL 1.2
   * The Conformance Test Suite was updated to a version that supports
     OpenCL 3.0; the CTS should also work with devices that report 1.2
   * For the list of supported features & more details,
     see doc/sphinx/source/conformance.rst
- Support for Clang/LLVM 14.0
- Text tracing improved - a few new command types traced,
  event dependencies are now also recorded
- There are now two scripts, which let the user parse & convert the
  outputs of LTTNG and Text tracer into a JSON format, suitable
  for loading into Chromium's trace visualizer (chrome://tracing)
- Support for generating specialized work-group functions and include them
  in the PoCL kernel program binaries.
- SPIR-V input: printf fixed

Notable Bug Fixes
-----------------

- Fixed poclbin for non-SPMD targets. The generic size WG function generation
  was completely broken and the breakage was hidden by the WG specialization
  recompilation, if online compiler was available.
- Fixed a race condidion in clBuildProgram
- Fixed uninitialized variables and other issues in tests
- Fixed the post-event-finish-cleanup process in the drivers,
  this should improve reliability
- Few more fixes for Android
- Fixed loss of precision in CUDA event times due to type conversion

Other
-----
